examples/invalid/11_named_function_missing_result_type.lane
module Examples.Invalid11
// invalid: named functions must state their result type
pub fn id(value : Int) {
  value
}
